# SciVis2019

Smoke/: CMakeLists.txt  Quad.cpp  Quad.h  fluids.c  fluids.cpp  make.dep  makefile  smoke
Smoke/fftw-2.1.5/sourceAndDoc/: Makefile  config.status  libtool
Smoke/fftw-2.1.5/sourceAndDoc/doc/: Makefile
Smoke/fftw-2.1.5/sourceAndDoc/fftw/: Makefile
Smoke/fftw-2.1.5/sourceAndDoc/mpi/: Makefile
Smoke/fftw-2.1.5/sourceAndDoc/rfftw/: Makefile
Smoke/fftw-2.1.5/sourceAndDoc/tests/: Makefile  fftw_test  rfftw_test
Smoke/fftw-2.1.5/sourceAndDoc/threads/: Makefile
Smoke/fftw-3.3.8/: Makefile  config.status  libtool
Smoke/fftw-3.3.8/api/: Makefile
Smoke/fftw-3.3.8/dft/: Makefile
Smoke/fftw-3.3.8/dft/scalar/: Makefile
Smoke/fftw-3.3.8/dft/scalar/codelets/: Makefile
Smoke/fftw-3.3.8/dft/simd/: Makefile
Smoke/fftw-3.3.8/dft/simd/altivec/: Makefile
Smoke/fftw-3.3.8/dft/simd/avx/: Makefile
Smoke/fftw-3.3.8/dft/simd/avx-128-fma/: Makefile
Smoke/fftw-3.3.8/dft/simd/avx2/: Makefile
Smoke/fftw-3.3.8/dft/simd/avx2-128/: Makefile
Smoke/fftw-3.3.8/dft/simd/avx512/: Makefile
Smoke/fftw-3.3.8/dft/simd/common/: Makefile
Smoke/fftw-3.3.8/dft/simd/generic-simd128/: Makefile
Smoke/fftw-3.3.8/dft/simd/generic-simd256/: Makefile
Smoke/fftw-3.3.8/dft/simd/kcvi/: Makefile
Smoke/fftw-3.3.8/dft/simd/neon/: Makefile
Smoke/fftw-3.3.8/dft/simd/sse2/: Makefile
Smoke/fftw-3.3.8/dft/simd/vsx/: Makefile
Smoke/fftw-3.3.8/doc/: Makefile
Smoke/fftw-3.3.8/doc/FAQ/: Makefile
Smoke/fftw-3.3.8/genfft/: Makefile
Smoke/fftw-3.3.8/kernel/: Makefile
Smoke/fftw-3.3.8/libbench2/: Makefile
Smoke/fftw-3.3.8/m4/: Makefile
Smoke/fftw-3.3.8/mpi/: Makefile
Smoke/fftw-3.3.8/rdft/: Makefile
Smoke/fftw-3.3.8/rdft/scalar/: Makefile
Smoke/fftw-3.3.8/rdft/scalar/r2cb/: Makefile
Smoke/fftw-3.3.8/rdft/scalar/r2cf/: Makefile
Smoke/fftw-3.3.8/rdft/scalar/r2r/: Makefile
Smoke/fftw-3.3.8/rdft/simd/: Makefile
Smoke/fftw-3.3.8/rdft/simd/altivec/: Makefile
Smoke/fftw-3.3.8/rdft/simd/avx/: Makefile
Smoke/fftw-3.3.8/rdft/simd/avx-128-fma/: Makefile
Smoke/fftw-3.3.8/rdft/simd/avx2/: Makefile
Smoke/fftw-3.3.8/rdft/simd/avx2-128/: Makefile
Smoke/fftw-3.3.8/rdft/simd/avx512/: Makefile
Smoke/fftw-3.3.8/rdft/simd/common/: Makefile
Smoke/fftw-3.3.8/rdft/simd/generic-simd128/: Makefile
Smoke/fftw-3.3.8/rdft/simd/generic-simd256/: Makefile
Smoke/fftw-3.3.8/rdft/simd/kcvi/: Makefile
Smoke/fftw-3.3.8/rdft/simd/neon/: Makefile
Smoke/fftw-3.3.8/rdft/simd/sse2/: Makefile
Smoke/fftw-3.3.8/rdft/simd/vsx/: Makefile
Smoke/fftw-3.3.8/reodft/: Makefile
Smoke/fftw-3.3.8/simd-support/: Makefile
Smoke/fftw-3.3.8/support/: Makefile
Smoke/fftw-3.3.8/tests/: Makefile
Smoke/fftw-3.3.8/threads/: Makefile
Smoke/fftw-3.3.8/tools/: Makefile
