cmake_minimum_required(VERSION 3.5)
project(Smoke)

set(CMAKE_CXX_STANDARD 14)

include_directories(fftw-2.1.5/include)
include_directories(fftw-2.1.5/sourceAndDoc/fftw)
include_directories(fftw-2.1.5/sourceAndDoc/mpi)
include_directories(fftw-2.1.5/sourceAndDoc/rfftw)
include_directories(fftw-2.1.5/sourceAndDoc/tests)
include_directories(fftw-2.1.5/sourceAndDoc/threads)

add_executable(Smoke
        fftw-2.1.5/include/fftw.h
        fftw-2.1.5/include/rfftw.h
        fftw-2.1.5/info/fftw.info
        fftw-2.1.5/info/fftw.info-1
        fftw-2.1.5/info/fftw.info-2
        fftw-2.1.5/info/fftw.info-3
        fftw-2.1.5/info/fftw.info-4
        fftw-2.1.5/info/fftw.info-5
        fftw-2.1.5/lib/libfftw.a
        fftw-2.1.5/lib/libfftw.la
        fftw-2.1.5/lib/librfftw.a
        fftw-2.1.5/lib/librfftw.la
        fftw-2.1.5/sourceAndDoc/cilk/executor_cilk.cilk
        fftw-2.1.5/sourceAndDoc/cilk/fftw_cilk.cilkh
        fftw-2.1.5/sourceAndDoc/cilk/fftwnd_cilk.cilk
        fftw-2.1.5/sourceAndDoc/cilk/Makefile
        fftw-2.1.5/sourceAndDoc/cilk/README
        fftw-2.1.5/sourceAndDoc/cilk/test_cilk.cilk
        fftw-2.1.5/sourceAndDoc/cilk/time_cilk.cilk
        fftw-2.1.5/sourceAndDoc/doc/equation-1.gif
        fftw-2.1.5/sourceAndDoc/doc/equation-2.gif
        fftw-2.1.5/sourceAndDoc/doc/equation-3.gif
        fftw-2.1.5/sourceAndDoc/doc/equation-4.gif
        fftw-2.1.5/sourceAndDoc/doc/fftw.info
        fftw-2.1.5/sourceAndDoc/doc/fftw.info-1
        fftw-2.1.5/sourceAndDoc/doc/fftw.info-2
        fftw-2.1.5/sourceAndDoc/doc/fftw.info-3
        fftw-2.1.5/sourceAndDoc/doc/fftw.info-4
        fftw-2.1.5/sourceAndDoc/doc/fftw.info-5
        fftw-2.1.5/sourceAndDoc/doc/fftw.texi
        fftw-2.1.5/sourceAndDoc/doc/Makefile
        fftw-2.1.5/sourceAndDoc/doc/Makefile.am
        fftw-2.1.5/sourceAndDoc/doc/Makefile.in
        fftw-2.1.5/sourceAndDoc/doc/mdate-sh
        fftw-2.1.5/sourceAndDoc/doc/rfftwnd.fig
        fftw-2.1.5/sourceAndDoc/doc/rfftwnd.gif
        fftw-2.1.5/sourceAndDoc/doc/stamp-vti
        fftw-2.1.5/sourceAndDoc/doc/texi2html
        fftw-2.1.5/sourceAndDoc/doc/texinfo.tex
        fftw-2.1.5/sourceAndDoc/doc/version.texi
        fftw-2.1.5/sourceAndDoc/FAQ/fftw-faq.html/index.html
        fftw-2.1.5/sourceAndDoc/FAQ/fftw-faq.html/section1.html
        fftw-2.1.5/sourceAndDoc/FAQ/fftw-faq.html/section2.html
        fftw-2.1.5/sourceAndDoc/FAQ/fftw-faq.html/section3.html
        fftw-2.1.5/sourceAndDoc/FAQ/fftw-faq.html/section4.html
        fftw-2.1.5/sourceAndDoc/FAQ/fftw-faq.html/section5.html
        fftw-2.1.5/sourceAndDoc/FAQ/bfnnconv.pl
        fftw-2.1.5/sourceAndDoc/FAQ/fftw-faq.ascii
        fftw-2.1.5/sourceAndDoc/FAQ/fftw-faq.bfnn
        fftw-2.1.5/sourceAndDoc/FAQ/fftw-faq.info
        fftw-2.1.5/sourceAndDoc/FAQ/fftw-faq.xrefdb
        fftw-2.1.5/sourceAndDoc/FAQ/html.refs
        fftw-2.1.5/sourceAndDoc/FAQ/m-ascii.pl
        fftw-2.1.5/sourceAndDoc/FAQ/m-html.pl
        fftw-2.1.5/sourceAndDoc/FAQ/m-info.pl
        fftw-2.1.5/sourceAndDoc/FAQ/m-lout.pl
        fftw-2.1.5/sourceAndDoc/FAQ/m-post.pl
        fftw-2.1.5/sourceAndDoc/FAQ/Makefile
        fftw-2.1.5/sourceAndDoc/fftw/config.c
        fftw-2.1.5/sourceAndDoc/fftw/config.h
        fftw-2.1.5/sourceAndDoc/fftw/config.h.in
        fftw-2.1.5/sourceAndDoc/fftw/executor.c
        fftw-2.1.5/sourceAndDoc/fftw/fftw-int.h
        fftw-2.1.5/sourceAndDoc/fftw/fftw.h
        fftw-2.1.5/sourceAndDoc/fftw/fftw.h.in
        fftw-2.1.5/sourceAndDoc/fftw/fftwf77.c
        fftw-2.1.5/sourceAndDoc/fftw/fftwnd.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_1.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_10.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_11.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_12.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_13.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_14.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_15.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_16.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_2.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_3.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_32.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_4.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_5.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_6.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_64.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_7.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_8.c
        fftw-2.1.5/sourceAndDoc/fftw/fn_9.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_1.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_10.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_11.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_12.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_13.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_14.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_15.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_16.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_2.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_3.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_32.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_4.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_5.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_6.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_64.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_7.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_8.c
        fftw-2.1.5/sourceAndDoc/fftw/fni_9.c
        fftw-2.1.5/sourceAndDoc/fftw/ftw_10.c
        fftw-2.1.5/sourceAndDoc/fftw/ftw_16.c
        fftw-2.1.5/sourceAndDoc/fftw/ftw_2.c
        fftw-2.1.5/sourceAndDoc/fftw/ftw_3.c
        fftw-2.1.5/sourceAndDoc/fftw/ftw_32.c
        fftw-2.1.5/sourceAndDoc/fftw/ftw_4.c
        fftw-2.1.5/sourceAndDoc/fftw/ftw_5.c
        fftw-2.1.5/sourceAndDoc/fftw/ftw_6.c
        fftw-2.1.5/sourceAndDoc/fftw/ftw_64.c
        fftw-2.1.5/sourceAndDoc/fftw/ftw_7.c
        fftw-2.1.5/sourceAndDoc/fftw/ftw_8.c
        fftw-2.1.5/sourceAndDoc/fftw/ftw_9.c
        fftw-2.1.5/sourceAndDoc/fftw/ftwi_10.c
        fftw-2.1.5/sourceAndDoc/fftw/ftwi_16.c
        fftw-2.1.5/sourceAndDoc/fftw/ftwi_2.c
        fftw-2.1.5/sourceAndDoc/fftw/ftwi_3.c
        fftw-2.1.5/sourceAndDoc/fftw/ftwi_32.c
        fftw-2.1.5/sourceAndDoc/fftw/ftwi_4.c
        fftw-2.1.5/sourceAndDoc/fftw/ftwi_5.c
        fftw-2.1.5/sourceAndDoc/fftw/ftwi_6.c
        fftw-2.1.5/sourceAndDoc/fftw/ftwi_64.c
        fftw-2.1.5/sourceAndDoc/fftw/ftwi_7.c
        fftw-2.1.5/sourceAndDoc/fftw/ftwi_8.c
        fftw-2.1.5/sourceAndDoc/fftw/ftwi_9.c
        fftw-2.1.5/sourceAndDoc/fftw/generic.c
        fftw-2.1.5/sourceAndDoc/fftw/Makefile
        fftw-2.1.5/sourceAndDoc/fftw/Makefile.am
        fftw-2.1.5/sourceAndDoc/fftw/Makefile.in
        fftw-2.1.5/sourceAndDoc/fftw/malloc.c
        fftw-2.1.5/sourceAndDoc/fftw/planner.c
        fftw-2.1.5/sourceAndDoc/fftw/putils.c
        fftw-2.1.5/sourceAndDoc/fftw/rader.c
        fftw-2.1.5/sourceAndDoc/fftw/stamp-h1
        fftw-2.1.5/sourceAndDoc/fftw/stamp-h2
        fftw-2.1.5/sourceAndDoc/fftw/timer.c
        fftw-2.1.5/sourceAndDoc/fftw/twiddle.c
        fftw-2.1.5/sourceAndDoc/fftw/wisdom.c
        fftw-2.1.5/sourceAndDoc/fftw/wisdomio.c
        fftw-2.1.5/sourceAndDoc/fortran/f77_test.F
        fftw-2.1.5/sourceAndDoc/fortran/fftw_f77.i
        fftw-2.1.5/sourceAndDoc/gensrc/asched.ml
        fftw-2.1.5/sourceAndDoc/gensrc/asched.mli
        fftw-2.1.5/sourceAndDoc/gensrc/codelet_prelude
        fftw-2.1.5/sourceAndDoc/gensrc/complex.ml
        fftw-2.1.5/sourceAndDoc/gensrc/complex.mli
        fftw-2.1.5/sourceAndDoc/gensrc/config
        fftw-2.1.5/sourceAndDoc/gensrc/config_prelude
        fftw-2.1.5/sourceAndDoc/gensrc/dag.ml
        fftw-2.1.5/sourceAndDoc/gensrc/dag.mli
        fftw-2.1.5/sourceAndDoc/gensrc/expr.ml
        fftw-2.1.5/sourceAndDoc/gensrc/expr.mli
        fftw-2.1.5/sourceAndDoc/gensrc/exprdag.ml
        fftw-2.1.5/sourceAndDoc/gensrc/exprdag.mli
        fftw-2.1.5/sourceAndDoc/gensrc/fft.ml
        fftw-2.1.5/sourceAndDoc/gensrc/genfft.ml
        fftw-2.1.5/sourceAndDoc/gensrc/install.sh
        fftw-2.1.5/sourceAndDoc/gensrc/magic.ml
        fftw-2.1.5/sourceAndDoc/gensrc/makeconfig.sh
        fftw-2.1.5/sourceAndDoc/gensrc/Makefile
        fftw-2.1.5/sourceAndDoc/gensrc/Makefile.fftw.am
        fftw-2.1.5/sourceAndDoc/gensrc/Makefile.genfft
        fftw-2.1.5/sourceAndDoc/gensrc/Makefile.rfftw.am
        fftw-2.1.5/sourceAndDoc/gensrc/Makefile.sources
        fftw-2.1.5/sourceAndDoc/gensrc/makemakefile.sh
        fftw-2.1.5/sourceAndDoc/gensrc/makerconfig.sh
        fftw-2.1.5/sourceAndDoc/gensrc/makesources.sh
        fftw-2.1.5/sourceAndDoc/gensrc/number.ml
        fftw-2.1.5/sourceAndDoc/gensrc/number.mli
        fftw-2.1.5/sourceAndDoc/gensrc/rconfig_prelude
        fftw-2.1.5/sourceAndDoc/gensrc/README
        fftw-2.1.5/sourceAndDoc/gensrc/schedule.ml
        fftw-2.1.5/sourceAndDoc/gensrc/schedule.mli
        fftw-2.1.5/sourceAndDoc/gensrc/symmetry.ml
        fftw-2.1.5/sourceAndDoc/gensrc/to_c.ml
        fftw-2.1.5/sourceAndDoc/gensrc/to_c.mli
        fftw-2.1.5/sourceAndDoc/gensrc/twiddle.ml
        fftw-2.1.5/sourceAndDoc/gensrc/util.ml
        fftw-2.1.5/sourceAndDoc/gensrc/util.mli
        fftw-2.1.5/sourceAndDoc/gensrc/variable.ml
        fftw-2.1.5/sourceAndDoc/gensrc/variable.mli
        fftw-2.1.5/sourceAndDoc/matlab/fftw.c
        fftw-2.1.5/sourceAndDoc/matlab/fftw.m
        fftw-2.1.5/sourceAndDoc/matlab/Makefile
        fftw-2.1.5/sourceAndDoc/matlab/README
        fftw-2.1.5/sourceAndDoc/mpi/fftw_f77_mpi.c
        fftw-2.1.5/sourceAndDoc/mpi/fftw_f77_mpi.h
        fftw-2.1.5/sourceAndDoc/mpi/fftw_mpi.c
        fftw-2.1.5/sourceAndDoc/mpi/fftw_mpi.h
        fftw-2.1.5/sourceAndDoc/mpi/fftw_mpi_test.c
        fftw-2.1.5/sourceAndDoc/mpi/fftwnd_mpi.c
        fftw-2.1.5/sourceAndDoc/mpi/Makefile
        fftw-2.1.5/sourceAndDoc/mpi/Makefile.am
        fftw-2.1.5/sourceAndDoc/mpi/Makefile.in
        fftw-2.1.5/sourceAndDoc/mpi/README.f77
        fftw-2.1.5/sourceAndDoc/mpi/rfftw_f77_mpi.c
        fftw-2.1.5/sourceAndDoc/mpi/rfftw_mpi.h
        fftw-2.1.5/sourceAndDoc/mpi/rfftw_mpi_test.c
        fftw-2.1.5/sourceAndDoc/mpi/rfftwnd_mpi.c
        fftw-2.1.5/sourceAndDoc/mpi/sched.c
        fftw-2.1.5/sourceAndDoc/mpi/sched.h
        fftw-2.1.5/sourceAndDoc/mpi/test_sched.c
        fftw-2.1.5/sourceAndDoc/mpi/test_transpose_mpi.c
        fftw-2.1.5/sourceAndDoc/mpi/TOMS_transpose.c
        fftw-2.1.5/sourceAndDoc/mpi/TOMS_transpose.h
        fftw-2.1.5/sourceAndDoc/mpi/transpose_mpi.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_1.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_10.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_11.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_12.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_128.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_13.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_14.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_15.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_16.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_2.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_3.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_32.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_4.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_5.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_6.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_64.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_7.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_8.c
        fftw-2.1.5/sourceAndDoc/rfftw/fcr_9.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhb_10.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhb_16.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhb_2.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhb_3.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhb_32.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhb_4.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhb_5.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhb_6.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhb_7.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhb_8.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhb_9.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhf_10.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhf_16.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhf_2.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhf_3.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhf_32.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhf_4.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhf_5.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhf_6.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhf_7.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhf_8.c
        fftw-2.1.5/sourceAndDoc/rfftw/fhf_9.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_1.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_10.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_11.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_12.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_128.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_13.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_14.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_15.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_16.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_2.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_3.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_32.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_4.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_5.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_6.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_64.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_7.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_8.c
        fftw-2.1.5/sourceAndDoc/rfftw/frc_9.c
        fftw-2.1.5/sourceAndDoc/rfftw/Makefile
        fftw-2.1.5/sourceAndDoc/rfftw/Makefile.am
        fftw-2.1.5/sourceAndDoc/rfftw/Makefile.in
        fftw-2.1.5/sourceAndDoc/rfftw/rconfig.c
        fftw-2.1.5/sourceAndDoc/rfftw/rexec.c
        fftw-2.1.5/sourceAndDoc/rfftw/rexec2.c
        fftw-2.1.5/sourceAndDoc/rfftw/rfftw.h
        fftw-2.1.5/sourceAndDoc/rfftw/rfftwf77.c
        fftw-2.1.5/sourceAndDoc/rfftw/rfftwnd.c
        fftw-2.1.5/sourceAndDoc/rfftw/rgeneric.c
        fftw-2.1.5/sourceAndDoc/rfftw/rplanner.c
        fftw-2.1.5/sourceAndDoc/tests/fftw_test.c
        fftw-2.1.5/sourceAndDoc/tests/Makefile
        fftw-2.1.5/sourceAndDoc/tests/Makefile.am
        fftw-2.1.5/sourceAndDoc/tests/Makefile.in
        fftw-2.1.5/sourceAndDoc/tests/README
        fftw-2.1.5/sourceAndDoc/tests/rfftw_test.c
        fftw-2.1.5/sourceAndDoc/tests/test_main.c
        fftw-2.1.5/sourceAndDoc/tests/test_main.h
        fftw-2.1.5/sourceAndDoc/threads/executor_threads.c
        fftw-2.1.5/sourceAndDoc/threads/fftw_f77_threads.c
        fftw-2.1.5/sourceAndDoc/threads/fftw_threads-int.h
        fftw-2.1.5/sourceAndDoc/threads/fftw_threads.c
        fftw-2.1.5/sourceAndDoc/threads/fftw_threads.h
        fftw-2.1.5/sourceAndDoc/threads/fftw_threads_test.c
        fftw-2.1.5/sourceAndDoc/threads/fftwnd_threads.c
        fftw-2.1.5/sourceAndDoc/threads/Makefile
        fftw-2.1.5/sourceAndDoc/threads/Makefile.am
        fftw-2.1.5/sourceAndDoc/threads/Makefile.in
        fftw-2.1.5/sourceAndDoc/threads/rexec2_threads.c
        fftw-2.1.5/sourceAndDoc/threads/rexec_threads.c
        fftw-2.1.5/sourceAndDoc/threads/rfftw_f77_threads.c
        fftw-2.1.5/sourceAndDoc/threads/rfftw_threads.h
        fftw-2.1.5/sourceAndDoc/threads/rfftw_threads_test.c
        fftw-2.1.5/sourceAndDoc/threads/rfftwnd_threads.c
        fftw-2.1.5/sourceAndDoc/acinclude.m4
        fftw-2.1.5/sourceAndDoc/aclocal.m4
        fftw-2.1.5/sourceAndDoc/acx_mpi.m4
        fftw-2.1.5/sourceAndDoc/acx_pthread.m4
        fftw-2.1.5/sourceAndDoc/AUTHORS
        fftw-2.1.5/sourceAndDoc/bootstrap.sh
        fftw-2.1.5/sourceAndDoc/ChangeLog
        fftw-2.1.5/sourceAndDoc/config.guess
        fftw-2.1.5/sourceAndDoc/config.log
        fftw-2.1.5/sourceAndDoc/config.status
        fftw-2.1.5/sourceAndDoc/config.sub
        fftw-2.1.5/sourceAndDoc/configure
        fftw-2.1.5/sourceAndDoc/configure.in
        fftw-2.1.5/sourceAndDoc/COPYING
        fftw-2.1.5/sourceAndDoc/COPYRIGHT
        fftw-2.1.5/sourceAndDoc/depcomp
        fftw-2.1.5/sourceAndDoc/fftw.spec
        fftw-2.1.5/sourceAndDoc/fftw.spec.in
        fftw-2.1.5/sourceAndDoc/INSTALL
        fftw-2.1.5/sourceAndDoc/install-sh
        fftw-2.1.5/sourceAndDoc/libtool
        fftw-2.1.5/sourceAndDoc/ltmain.sh
        fftw-2.1.5/sourceAndDoc/Makefile
        fftw-2.1.5/sourceAndDoc/Makefile.am
        fftw-2.1.5/sourceAndDoc/Makefile.in
        fftw-2.1.5/sourceAndDoc/missing
        fftw-2.1.5/sourceAndDoc/mkinstalldirs
        fftw-2.1.5/sourceAndDoc/NEWS
        fftw-2.1.5/sourceAndDoc/README
        fftw-2.1.5/sourceAndDoc/README.hacks
        fftw-2.1.5/sourceAndDoc/TODO
        README_files/filelist.xml
        README_files/image001.png
        README_files/image002.jpg
        README_files/image003.png
        README_files/image004.jpg
        README_files/image005.png
        README_files/image006.jpg
        README_files/image007.png
        README_files/image008.jpg
        fluids.c
        fluids.o
        make.dep
        makefile
        README.html
        readme_ubuntu.txt
        smoke Quad.cpp Quad.h)
